--- a/Web/app/partials/home.html
+++ b/Web/app/partials/home.html
@@ -4,8 +4,7 @@
     </div>
     <div class="jumbotron">
         <p>
-            Helps delegates and organisers with the boring details of Model UNs. Add yourself to a Speakers List or Vote during a Model UN using your phone, tablet or PC. <br>
-            Everyone spends less time on the rules and more time on the debate
+            Make your Model UN better. With yieldto.me delegates can add themeslves to Speakers Lists and Vote using their phone, tablet or PC. It supports the old fashioned way at the same time too. Everyone spends less time on the rules and more time on the debate
         </p>
         <button type="button" id="loginButton" class="btn btn-primary btn-lg" ng-click="showLogin()">Get started</button>
     </div>
@@ -52,7 +51,7 @@
                 <div class="thumbnail">
                     <img src="img/Attendees_Thumbnail.jpg" style="margin-top:5px" class="img-rounded">
                     <div class="caption">
-                        <p>Create your own delegate Profile and share contact details. See the contact details that other delegates have shared. Like other delegates- and find out if they like you too</p>
+                        <p>Secretly 'Like' other delegates. They won't find out unless they 'Like' you too. Then share contact details on your delegate profile. See the contact details that other delegates have shared with you</p>
                     </div>
                 </div>
             </div>
@@ -83,6 +82,9 @@
         </accordion-group>
         <accordion-group heading="How can I contribute code?">
           yieldto.me is open source- meaning you can see the code and contribute to fixing bugs and developing enhancements or new features. The code is <a href="http://www.github.com/bradleyscott/yieldtome" target="_blank">available on GitHub</a> for you to look at, fork, and submit pull requests to. We also have an RESTful API that can be used to develop your own stand-alone Apps and sites using yieldto.me's data. Get in contact if you want an API key.
+        </accordion-group>
+        <accordion-group heading="I can't code. How do I contribute?">
+          We are really in need of some web and graphic design help. So if you've got those skills then get in touch. If you don't- we are on the hunt for more Model UNs to use yieldto.me so we can get more feedback and make it even better. So if you can be an enthusiastic spokesperson- that would be great too.
         </accordion-group>
   </accordion>
 </div>
