--- a/Web/app/partials/attendee/attendee.html
+++ b/Web/app/partials/attendee/attendee.html
@@ -1,16 +1,14 @@
-<div class="media">
+<div class="row-picture">
     <!-- Profile picture -->
-    <img class="media-object pull-left" ng-src="img/profile.jpg" ng-hide="attendee.Profile" style="width:50px;height:50px" >
-    <img class="media-object pull-left" ng-src="{{attendee.Profile.ProfilePictureUri}}"  ng-show="attendee.Profile" style="width:50px;height:50px" ng-click="showProfile(attendee.Profile.ProfileID)">
-    <div class="media-body">
-        <!-- Edit attendee button -->
-        <button class="btn btn-default pull-right" ng-click="editAttendee(attendee.AttendeeID)" ng-show="isCreator || attendee.Profile.ProfileID == profile.ProfileID">
-            <span class="glyphicon glyphicon glyphicon-pencil"></span>
-        </button>
-        <div>
-            <!-- Names -->
-            <h4 class="media-heading">{{attendee.Name}}</h4>
-            {{attendee.Profile.Name}}
-        </div>
-    </div>
+    <img class="circle pull-left" ng-src="img/profile.jpg" ng-hide="attendee.Profile" >
+    <img class="circle pull-left" ng-src="{{attendee.Profile.ProfilePictureUri}}"  ng-show="attendee.Profile" ng-click="showProfile(attendee.Profile.ProfileID)">
 </div>
+<div class="row-content">
+    <!-- Edit attendee button -->
+    <button class="btn btn-default btn-lg mdi-content-create pull-right" ng-click="editAttendee(attendee.AttendeeID)" ng-show="isCreator || attendee.Profile.ProfileID == profile.ProfileID"></button>
+    <!-- Names -->
+    <h4 class="list-group-item-heading">{{attendee.Name}}</h4>
+    <p class="list-group-item-text">{{attendee.Profile.Name}}</p>
+</div>
+<div class="list-group-separator"></div>
+
