--- a/Web/app/partials/event/editEvent.html
+++ b/Web/app/partials/event/editEvent.html
@@ -22,22 +22,23 @@
             <div class="form-group">
                 <div class="input-group">
                     <span class="input-group-addon" style="min-width:65px">start</span>
-                    <input name="startDate" class="form-control" type="date" ng-model="startDateAsString" pattern="dd/MM/YYYY" required />
+                    <input name="startDate" class="form-control" type="date" ng-model="startDate" required />
                     <span class="form-control validation" ng-show="form.startDate.$error.required">When do we start?</span>
                 </div>
             </div>
             <div class="form-group">
                 <div class="input-group">
                     <span class="input-group-addon" style="min-width:65px">end</span>
-                    <input name="endDate" class="form-control" type="date" ng-model="endDateAsString" pattern="dd/MM/YYYY" required min="{{startDateAsString}}" />
+                    <input name="endDate" class="form-control" type="date" ng-model="endDate" required min="{{startDate}}" />
                     <span class="form-control validation" ng-show="form.endDate.$error.required">It's gotta end at some point!</span>
+                    <span class="form-control validation" ng-show="form.endDate.$error.min">Planning on time travel?</span>
                 </div>
             </div>
             <div class="row">
                 <div class="text-right">
-                    <button type="button" ng-click="$back()" class="btn btn-default">{{alternatebutton}}</button>
-                    <button type="button" ng-click="showDelete()" ng-show="isDeleteEnabled" class="btn btn-danger">Delete</button>
-                    <button type="submit" ng-disabled="form.$invalid" ng-click="save()" class="btn btn-primary">Save</button>
+                    <button type="button" ng-click="$back()" class="btn btn-default btn-fab btn-raised mdi-navigation-arrow-back"></button>
+                    <button type="button" ng-click="showDelete()" ng-show="isDeleteEnabled" class="btn btn-danger btn-fab btn-raised mdi-content-clear"></button>
+                    <button type="submit" ng-disabled="form.$invalid" ng-click="save()" class="btn btn-primary  btn-fab btn-raised mdi-content-save"></button>
                 </div>
             </div>
         </div>
