--- a/Web/app/partials/poll/editPoll.html
+++ b/Web/app/partials/poll/editPoll.html
@@ -1,26 +1,33 @@
 <ytm-menu></ytm-menu>
 <div class="container body-content">
     <h2>{{title}}</h2>
-    <form name="form" role="form" class="css-form form-horizontal" novalidate>
-        <div style="margin-left:15px; margin-right:15px">
-            <div class="form-group">
-                <div class="input-group">
-                    <span class="input-group-addon" style="min-width:115px">name</span>
-                    <input name="name" class="form-control" type="text" ng-model="poll.Name" required placeholder="Poll name" />
-                    <span class="form-control validation" ng-show="form.name.$invalid">Whats this Poll called?</span>
+    <div style="margin-left:15px; margin-right:15px">
+        <form name="form" class="form-horizontal">
+            <fieldset>
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon" style="min-width:125px">name</span>
+                        <input name="name" class="form-control" type="text" ng-model="poll.Name" required placeholder="Poll name" />
+                        <span class="form-control validation" ng-show="form.name.$invalid">Whats this Poll called?</span>
+                    </div>
+                    <div class="input-group">
+                        <span class="input-group-addon" style="min-width:125px">% majority req'd
+                            <br>to pass</span>
+                        <input name="majorityRequired" class="form-control" type="number" min="1" max="100" ng-model="poll.MajorityRequired" required/>
+                        <span class="input-group-addon">%</span>
+                        <span class="form-control validation" ng-show="form.majorityRequired.$invalid">Between 1 and 100 please</span>
+                    </div>
+                    <div class="input-group" ng-hide="isDeleteEnabled">
+                        <span class="input-group-addon" style="min-width:125px">poll type</span>
+                        <span>
+                            <select name="ignoreAbstain" class="form-control" ng-model="ignoreAbstain">
+                                <option value="true">For votes must exceed Against votes</option>
+                                <option value="false">For votes must exceed Against AND Abstain votes</option>
+                            </select>
+                        </span>
+                    </div>
                 </div>
-                <div class="input-group">
-                    <span class="input-group-addon" style="min-width:115px">majority req'd<br>to pass</span>
-                    <span class="form-control" style="min-height:42px"><input name="majorityRequired" type="number" min="1" max="100" ng-model="poll.MajorityRequired"/>%</span>
-                    <span class="form-control validation" ng-show="form.majorityRequired.$invalid">Between 1 and 100 please</span>
-                </div>
-                <div class="input-group" ng-hide="isDeleteEnabled">
-                    <span class="input-group-addon" style="min-width:115px">ignore<br>abstentions</span>
-                    <span class="form-control" style="min-height:42px">
-                        <input type="checkbox" ng-model="ignoreAbstain">
-                    </span>
-                </div>
-            </div>
+            </fieldset>
             <div class="row">
                 <div class="text-right">
                     <button type="button" ng-click="$back()" class="btn btn-default">{{alternatebutton}}</button>
@@ -28,6 +35,6 @@
                     <button type="submit" ng-disabled="form.$invalid" ng-click="save()" class="btn btn-primary">Save</button>
                 </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
 </div>
