--- a/Web/app/partials/poll/listPolls.html
+++ b/Web/app/partials/poll/listPolls.html
@@ -14,24 +14,25 @@
                         </div>
                     </div>
                     <div class="col-xs-3">
-                        <button type="button" class="btn btn-primary pull-right" ng-click="new()">
-                            <span class="glyphicon glyphicon-plus" style="margin-right:5px"></span>New
-                        </button>
+                        <button type="button" class="btn btn-primary btn-fab btn-raised mdi-content-add pull-right" ng-click="new()"></button>
                     </div>
                 </div>
             </div>
             <div class="well" ng-show="polls.length == 0">There is not yet any Polls to vote on</div>
-            <a href="#/polls/{{poll.PollID}}" class="list-group-item" ng-repeat="poll in polls | filter:query | orderBy:'Name'">
-                <h4 class="list-group-item-heading">{{poll.Name}}<br>
-                    <small ng-show="poll.IsPassing">Passing</small>
-                    <small ng-hide="poll.IsPassing">Failing</small>
-                </h4>
-                <progress max="poll.VotesFor + poll.VotesAgainst + poll.VotesAbstaining">
-                    <bar value="poll.VotesFor" type="success"><span>{{poll.VotesFor}} for</span></bar>
-                    <bar value="poll.VotesAgainst" type="danger"><span>{{poll.VotesAgainst}} against</span></bar>
-                    <bar value="poll.VotesAbstaining"><span>{{poll.VotesAbstaining}} abstain</span></bar>
-                </progress>
-            </a>
+            <div class="list-group">
+                <a href="#/polls/{{poll.PollID}}" class="list-group-item" ng-repeat="poll in polls | filter:query | orderBy:'Name'">
+                    <h4 class="list-group-item-heading">{{poll.Name}}<br>
+                        <small ng-show="poll.IsPassing">Passing</small>
+                        <small ng-hide="poll.IsPassing">Failing</small>
+                    </h4>
+                    <progress max="poll.VotesFor + poll.VotesAgainst + poll.VotesAbstaining">
+                        <bar value="poll.VotesFor" type="success"><span>{{poll.VotesFor}} for</span></bar>
+                        <bar value="poll.VotesAgainst" type="danger"><span>{{poll.VotesAgainst}} against</span></bar>
+                        <bar value="poll.VotesAbstaining"><span>{{poll.VotesAbstaining}} abstain</span></bar>
+                    </progress>
+                    <div class="list-group-separator"></div>
+                </a>
+            </div>
         </div>
     </div>
 </div>
