--- a/Web/app/partials/speakersList/attendee.html
+++ b/Web/app/partials/speakersList/attendee.html
@@ -1,32 +1,26 @@
-<div class="media">
+<div class="row-picture">
     <!-- Profile picture -->
-    <img class="media-object pull-left" ng-src="img/profile.jpg" ng-hide="attendee.Profile" style="width:50px;height:50px" >
-    <img class="media-object pull-left" ng-src="{{attendee.Profile.ProfilePictureUri}}" ng-show="attendee.Profile" style="width:50px;height:50px" ng-click="showProfile({{attendee.Profile.ProfileID}})">
-    <div class="media-body">
-        <!-- Edit button -->
-        <button class="btn btn-default pull-right" ng-hide="attendee{{attendee.AttendeeID}}Open" ng-click="attendee{{attendee.AttendeeID}}Open=!attendee{{attendee.AttendeeID}}Open">
-            <span class="glyphicon glyphicon glyphicon-plus"></span>
-        </button>
-        <button class="btn btn-default pull-right" ng-show="attendee{{attendee.AttendeeID}}Open" ng-click="attendee{{attendee.AttendeeID}}Open=!attendee{{attendee.AttendeeID}}Open">
-            <span class="glyphicon glyphicon glyphicon-minus"></span>
-        </button>
-        <div>
-            <!-- Names -->
-            <h4 class="media-heading">{{attendee.Name}}</h4>
-            {{attendee.Profile.Name}}
-            <div style="height:5px"></div>
-        </div>
-    </div>
-    <!-- Add speaker controls -->
-    <div collapse="!attendee{{attendee.AttendeeID}}Open">
-        <div class="btn-group btn-group-justified" style="margin-top:10px">
-            <label class="btn btn-default" ng-click="add(attendee,'For')">
-                <span class="glyphicon glyphicon-thumbs-up"></span>
-            </label>
-            <label class="btn btn-default" ng-click="add(attendee,'Against')">
-                <span class="glyphicon glyphicon-thumbs-down"></span>
-            </label>
-            <label class="btn btn-default" ng-click="add(attendee,'None')">Neutral</label>
-        </div>
+    <img class="circle pull-left" ng-src="img/profile.jpg" ng-hide="attendee.Profile">
+    <img class="circle pull-left" ng-src="{{attendee.Profile.ProfilePictureUri}}" ng-show="attendee.Profile" ng-click="showProfile({{attendee.Profile.ProfileID}})">
+</div>
+<div class="row-content">
+    <!-- Edit button -->
+    <button class="btn btn-default btn-lg mdi-content-add pull-right" ng-hide="attendee{{attendee.AttendeeID}}Open" ng-click="attendee{{attendee.AttendeeID}}Open=!attendee{{attendee.AttendeeID}}Open"></button>
+    <button class="btn btn-default btn-lg mdi-content-remove pull-right" ng-show="attendee{{attendee.AttendeeID}}Open" ng-click="attendee{{attendee.AttendeeID}}Open=!attendee{{attendee.AttendeeID}}Open"></button>
+    <!-- Names -->
+    <h4 class="list-group-item-heading">{{attendee.Name}}</h4>
+    <p class="list-group-item-text">{{attendee.Profile.Name}}</p>
+</div>
+<!-- Add speaker controls -->
+<div collapse="!attendee{{attendee.AttendeeID}}Open">
+    <div class="btn-group btn-group-justified" style="margin-top:10px">
+        <label class="btn btn-default" ng-click="add(attendee,'For')">
+            <span class="glyphicon glyphicon-thumbs-up"></span>
+        </label>
+        <label class="btn btn-default" ng-click="add(attendee,'Against')">
+            <span class="glyphicon glyphicon-thumbs-down"></span>
+        </label>
+        <label class="btn btn-default" ng-click="add(attendee,'None')">Neutral</label>
     </div>
 </div>
+<div class="list-group-separator"></div>
