Updated home page with new screenshots

--- a/Web/app/partials/home.html
+++ b/Web/app/partials/home.html
@@ -83,7 +83,7 @@
         <accordion-group heading="How can I contribute code?">
           yieldto.me is open source- meaning you can see the code and contribute to fixing bugs and developing enhancements or new features. The code is <a href="http://www.github.com/bradleyscott/yieldtome" target="_blank">available on GitHub</a> for you to look at, fork, and submit pull requests to. We also have an RESTful API that can be used to develop your own stand-alone Apps and sites using yieldto.me's data. Get in contact if you want an API key.
         </accordion-group>
-        <accordion-group heading="I can't code. How do I contribute?">
+        <accordion-group heading="I can't code. How can I contribute?">
           We are really in need of some web and graphic design help. So if you've got those skills then get in touch. If you don't- we are on the hunt for more Model UNs to use yieldto.me so we can get more feedback and make it even better. So if you can be an enthusiastic spokesperson- that would be great too.
         </accordion-group>
   </accordion>
