--- a/Web/app/partials/event/listEvents.html
+++ b/Web/app/partials/event/listEvents.html
@@ -53,9 +53,8 @@
             </div>
             <div class="list-group">
                 <a href="#/viewProfile/{{attendee.Profile.ProfileID}}" class="list-group-item" ng-animate="'animate'" ng-repeat="attendee in attendees | filter:queryAttendees">
-                    <ytm-attendee>
+                    <ytm-attendee></ytm-attendee>
                 </a>
-                </ytm-attendee>
             </div>
         </div>
     </div>
