--- a/Web/app/partials/menus/menu.html
+++ b/Web/app/partials/menus/menu.html
@@ -11,9 +11,10 @@
         </div>
         <div class="navbar-collapse" collapse="!isNavOpen">
             <ul class="nav navbar-nav" ng-show="attendee">
-                <li><a href="#/attendees">Attendees</a></li>
-                <li><a href="#/speakersLists">Speakers</a></li>
-                <li><a href="#/polls">Polls</a></li>
+                <li><a href="#/attendees">Chat</a></li>
+                <li><a href="#/speakersLists">Speak</a></li>
+                <li><a href="#/polls">Vote</a></li>
+                <li><a href="http://docs.yieldto.me" target="_blank">Docs</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#/events" ng-show="event">Other Model UNs</a></li>                
