--- a/Web/app/partials/attendee/listAttendees.html
+++ b/Web/app/partials/attendee/listAttendees.html
@@ -20,7 +20,7 @@
             <span class="input-group-addon">
                 <span class="glyphicon glyphicon-search"></span>
             </span>
-            <input type="text" class="form-control" ng-model="query" placeholder="Find people..." />
+            <input type="text" class="form-control" ng-model="query" placeholder="Find delegates..." />
         </div>
     </div>
     <div class="list-group">
