--- a/Web/app/partials/profile/viewProfile.html
+++ b/Web/app/partials/profile/viewProfile.html
@@ -9,7 +9,7 @@
             <a href="{{profile.DefaultContactUri}}" target="_blank"><img ng-src="{{profile.ProfilePictureUri}}" class="img-responsive img-rounded"/></a>
         </div>
         <div class="col-sm-9">
-            <div class="well" ng-hide="profile.IsEmailPublic || profile.IsPhonePublic || profile.IsTwitterPublic">{{profile.Name}} is not sharing any contact details with you</div>
+            <div class="well" ng-hide="profile.IsEmailPublic || profile.IsPhonePublic || profile.IsTwitterPublic">{{profile.Name}} is not sharing any contact details</div>
             <div class="alert alert-success" role="alert" ng-show="isLikeRequited">{{profile.Name}} likes you too!</div>
             <div class="form-group"  ng-show="profile.Email && profile.IsEmailPublic">
                 <div class="input-group">
